--- a/index.html
+++ b/index.html
@@ -91,8 +91,20 @@
 				<div id="row">
 					<div id="col1">
 						<div id="img-title">
+							<img src="./assets/icons/tankhoa.png" class="icon" />
+							<h3>Tan Khoa Informatics Center</h3>
+						</div>
+						<h4 id="sub-img-title">Instructor</h4>
+					</div>
+					<div id="col2">
+						<h3>06/2022 - 05/2023</h3>
+					</div>
+				</div>
+				<div id="row">
+					<div id="col1">
+						<div id="img-title">
 							<img src="./assets/icons/vku.png" class="icon" />
-							<h3>Vietnam - Korea University of ICT</h3>
+							<h3>Vietnam - Korea University</h3>
 						</div>
 						<h4 id="sub-img-title">Teaching Assistant</h4>
 					</div>
@@ -113,25 +125,38 @@
 						<h4 id="sub-img-title">Finalist</h4>
 					</div>
 					<div id="col2">
-						<h3>02/2024
-							
-						</h3>
+						<h3>02/2024</h3>
 					</div>
 				</div>
 				<div id="row">
 					<div id="col1">
 						<div id="img-title">
 							<img src="./assets/icons/icpc.png" class="icon" />
-							<h3>ICPC Asia HoChiMinh Regional</h3>
+							<h3>ICPC Asia Regional</h3>
 						</div>
-						<h4 id="sub-img-title">Bronze medalist</h4>
+						<h4 id="sub-img-title">Bronze Medalist</h4>
 					</div>
 					<div id="col2">
 						<h3>12/2022</h3>
 					</div>
 				</div>
 			</div>
-
+			
+			<div id="projects">
+				<h2>Projects</h2>
+				<div id="row">
+					<div id="col1">
+						<div id="img-title">
+							<img src="./assets/icons/lattext.png" class="icon" />
+							<h3>Lattext.org</h3>
+						</div>
+						<h4 id="sub-img-title">Real-time Markdown-to-PDF editor</h4>
+					</div>
+					<div id="col2">
+						<h3></h3>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
