good morning commit

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 							<img src="./assets/icons/lattext.png" class="icon" />
 							<h3>Lattext.org</h3>
 						</div>
-						<h4 id="sub-img-title">Real-time Markdown-to-PDF editor</h4>
+						<h4 id="sub-img-title">Real-time Markdown-to-PDF Editor</h4>
 					</div>
 					<div id="col2">
 						<h3></h3>
@@ -138,7 +138,7 @@
 							<img src="./assets/icons/icpc.png" class="icon" />
 							<h3>ICPC South Central USA Regional</h3>
 						</div>
-						<h4 id="sub-img-title">Finalist</h4>
+						<h4 id="sub-img-title">Finalist, Team Leader</h4>
 					</div>
 					<div id="col2">
 						<h3>02/2024</h3>
@@ -150,7 +150,7 @@
 							<img src="./assets/icons/icpc.png" class="icon" />
 							<h3>ICPC Asia Regional</h3>
 						</div>
-						<h4 id="sub-img-title">Bronze Medalist</h4>
+						<h4 id="sub-img-title">Bronze Medalist, Team Leader</h4>
 					</div>
 					<div id="col2">
 						<h3>12/2022</h3>
