--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 	<div id="card">
 		<div id="bio-card">
-			<img id="profile-pic" src="./assets/will.jpg" alt="William">
+			<img id="profile-pic" src="./assets/william.jpg" alt="William">
 
 			<h1>William Le</h1>
 			<h3>Computer Science Student</h3>
