Update information: ICPC

--- a/index.html
+++ b/index.html
@@ -136,24 +136,24 @@
 					<div id="col1">
 						<div id="img-title">
 							<img src="./assets/icons/icpc.png" class="icon" />
-							<h3>ICPC South Central USA Regional</h3>
+							<h3>ICPC NA Big South Contest</h3>
 						</div>
 						<h4 id="sub-img-title">Finalist, Team Leader</h4>
 					</div>
 					<div id="col2">
-						<h3>02/2024</h3>
+						<h3>2024</h3>
 					</div>
 				</div>
 				<div id="row">
 					<div id="col1">
 						<div id="img-title">
 							<img src="./assets/icons/icpc.png" class="icon" />
-							<h3>ICPC Asia Regional</h3>
+							<h3>ICPC Asia Regional Contest</h3>
 						</div>
 						<h4 id="sub-img-title">Bronze Medalist, Team Leader</h4>
 					</div>
 					<div id="col2">
-						<h3>12/2022</h3>
+						<h3>2022</h3>
 					</div>
 				</div>
 			</div>
