update details in index.html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
 			<h1>William Le</h1>
 			<h3>Computer Science Student</h3>
+			<h3>Competitive Programming Lover</h3>
+
 			<div id="button-container">
 				<a href="https://www.linkedin.com/in/yucyle/" target="_blank" data-tooltip="LinkedIn"
 					data-tooltip-persistent>
