deprecate: "yucyle" references in index.html, update to "williamle817"

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<link rel="stylesheet" href="./style.css">
 	<script src="https://kit.fontawesome.com/323396acdb.js" crossorigin="anonymous"></script>
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-28WQVGZ0XS"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -36,11 +35,11 @@
 			<h4>Competitive Programming Lover</h4>
 
 			<div id="button-container">
-				<a href="https://www.linkedin.com/in/yucyle/" target="_blank" data-tooltip="LinkedIn"
+				<a href="https://www.linkedin.com/in/williamle817/" target="_blank" data-tooltip="LinkedIn"
 					data-tooltip-persistent>
 					<i id="linkedin" class="fab fa-linkedin-in"></i>
 				</a>
-				<a href="https://www.github.com/yucyle" target="_blank" data-tooltip="Github" data-tooltip-persistent>
+				<a href="https://www.github.com/williamle817" target="_blank" data-tooltip="Github" data-tooltip-persistent>
 					<i id="github" class="fab fa-github"></i>
 				</a>
 				<a href="https://williamle817.com/" target="_blank" data-tooltip="Resume" data-tooltip-persistent>
