update: add second project

--- a/index.html
+++ b/index.html
@@ -132,6 +132,19 @@
 						<h3></h3>
 					</div>
 				</div>
+				<div id="row">
+					<div id="col1">
+						<div id="img-title">
+							<img src="./assets/icons/project2logo.png" class="icon" />
+							<h3>Ethereum Trading Bot</h3>
+						</div>
+						<h4 id="sub-img-title">C++ Trading Engine</h4>
+					</div>
+					<div id="col2">
+						<h3></h3>
+					</div>
+				</div>
+				
 			</div>
 
 			<div id="activities">
