feat(ui): add project links and update styles

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 					<div id="col1">
 						<div id="img-title">
 							<img src="./assets/icons/lattext.png" class="icon" />
-							<h3>Lattext.org</h3>
+							<h3><a href="https://lattex.org/" id="project_link">Lattext</a></h3>
 						</div>
 						<h4 id="sub-img-title">Real-time Markdown-to-PDF Editor</h4>
 					</div>
@@ -136,7 +136,7 @@
 					<div id="col1">
 						<div id="img-title">
 							<img src="./assets/icons/project2logo.png" class="icon" />
-							<h3>Ethereum Trading Bot</h3>
+							<h3><a href="https://github.com/williamle817/eth-trading-bot" id="project_link">Ethereum Trading Bot</a></h3>
 						</div>
 						<h4 id="sub-img-title">C++ Trading Engine</h4>
 					</div>
@@ -144,7 +144,6 @@
 						<h3></h3>
 					</div>
 				</div>
-				
 			</div>
 
 			<div id="activities">
