--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 							<img src="./assets/icons/project2logo.png" class="icon" />
 							<h3><a href="https://github.com/williamle817/eth-trading-bot" id="project_link">Ethereum Trading Bot</a></h3>
 						</div>
-						<h4 id="sub-img-title">C++ Trading Engine</h4>
+						<h4 id="sub-img-title">C++ ETH Trading Engine</h4>
 					</div>
 					<div id="col2">
 						<h3></h3>
