--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 
 			<h1>William Le</h1>
 			<h3>Computer Science Student</h3>
-			<h4>Competitive Programming Lover</h4>
-
+			<h4>Yucy @ Codeforces</h4>
 			<div id="button-container">
 				<a href="https://www.linkedin.com/in/williamle817/" target="_blank" data-tooltip="LinkedIn"
 					data-tooltip-persistent>
