--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<img id="profile-pic" src="./assets/william.jpg" alt="William">
 
 			<h1>William Le</h1>
-			<h3>Computer Science Student</h3>
+			<h3>CS Student 🇺🇸 🇻🇳</h3>
 			<h4>Yucy @ Codeforces</h4>
 			<div id="button-container">
 				<a href="https://www.linkedin.com/in/williamle817/" target="_blank" data-tooltip="LinkedIn"
