--- a/index.html
+++ b/index.html
@@ -143,25 +143,7 @@
 			</div>
 
 			<div id="activities">
-				<h2>Activities</h2>
-				<div id="row">
-					<div id="col1">
-						<div id="img-title">
-							<img src="./assets/icons/icpc.png" class="icon" />
-							<h3>ICPC NA Big South Contest</h3>
-						</div>
-						<h4 id="sub-img-title">Finalist, Team Leader</h4>
-					</div>
-				</div>
-				<div id="row">
-					<div id="col1">
-						<div id="img-title">
-							<img src="./assets/icons/icpc.png" class="icon" />
-							<h3>ICPC Asia Regional Contest</h3>
-						</div>
-						<h4 id="sub-img-title">Bronze Medalist, Team Leader</h4>
-					</div>
-				</div>
+				<!-- <h2>Activities</h2> -->
 			</div>
 		</div>
 	</div>
