--- a/index.html
+++ b/index.html
@@ -67,27 +67,28 @@
 				<div id="row">
 					<div id="col1">
 						<div id="img-title">
+							<img src="./assets/icons/microsoft.png" class="icon" />
+							<h3>Microsoft</h3>
+						</div>
+						<h4 id="sub-img-title">Software Engineer</h4>
+					</div>
+					<div id="col2">
+						<h3>Intern</h3>
+					</div>
+				</div>
+				<div id="row">
+					<div id="col1">
+						<div id="img-title">
 							<img src="./assets/icons/lqdoj.png" class="icon" />
 							<h3>LQD Online Judge</h3>
 						</div>
 						<h4 id="sub-img-title">Software Engineer Intern</h4>
 					</div>
 					<div id="col2">
-						<h3>06/2024 - 12/2024</h3>
+						<h3>Summer 2024</h3>
 					</div>
 				</div>
-				<div id="row">
-					<div id="col1">
-						<div id="img-title">
-							<img src="./assets/icons/fpt.png" class="icon" />
-							<h3>FPT Software</h3>
-						</div>
-						<h4 id="sub-img-title">Software Engineer Intern</h4>
-					</div>
-					<div id="col2">
-						<h3>02/2023 - 04/2023</h3>
-					</div>
-				</div>
+
 				<div id="row">
 					<div id="col1">
 						<div id="img-title">
@@ -97,24 +98,12 @@
 						<h4 id="sub-img-title">Instructor</h4>
 					</div>
 					<div id="col2">
-						<h3>06/2022 - 05/2023</h3>
-					</div>
-				</div>
-				<div id="row">
-					<div id="col1">
-						<div id="img-title">
-							<img src="./assets/icons/vku.png" class="icon" />
-							<h3>Vietnam - Korea University</h3>
-						</div>
-						<h4 id="sub-img-title">Teaching Assistant</h4>
-					</div>
-					<div id="col2">
-						<h3>10/2022 - 12/2022</h3>
+						<h3>2022 - 2023</h3>
 					</div>
 				</div>
 			</div>
 
-			<div id="projects">
+			<!-- <div id="projects">
 				<h2>Projects</h2>
 				<div id="row">
 					<div id="col1">
@@ -140,7 +129,7 @@
 						<h3></h3>
 					</div>
 				</div>
-			</div>
+			</div> -->
 
 			<div id="activities">
 				<!-- <h2>Activities</h2> -->
