--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 							<img src="./assets/icons/microsoft.png" class="icon" />
 							<h3>Microsoft</h3>
 						</div>
-						<h4 id="sub-img-title">Software Engineer</h4>
+						<h4 id="sub-img-title">Software Engineer Intern</h4>
 					</div>
 					<div id="col2">
-						<h3>Intern</h3>
+						<h3>Summer</h3>
 					</div>
 				</div>
 				<div id="row">
@@ -82,10 +82,10 @@
 							<img src="./assets/icons/lqdoj.png" class="icon" />
 							<h3>LQD Online Judge</h3>
 						</div>
-						<h4 id="sub-img-title">Software Engineer Intern</h4>
+						<h4 id="sub-img-title">Full Stack Engineer</h4>
 					</div>
 					<div id="col2">
-						<h3>Summer 2024</h3>
+						<h3>Summer 2023</h3>
 					</div>
 				</div>
 
