--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<div id="row">
 					<div id="col1">
 						<div id="img-title">
-							<img src="./assets/icons/uta.png" class="icon" />
+							<img src="./assets/icons/uta2.png" class="icon" />
 							<h3>UT Arlington</h3>
 						</div>
 						<h4 id="sub-img-title">B.S in Computer Science</h4>
@@ -70,10 +70,10 @@
 							<img src="./assets/icons/microsoft.png" class="icon" />
 							<h3>Microsoft</h3>
 						</div>
-						<h4 id="sub-img-title">Software Engineer Intern</h4>
+						<h4 id="sub-img-title">Full-time Internship</h4>
 					</div>
 					<div id="col2">
-						<h3>Summer</h3>
+						<h3>Software Engineer</h3>
 					</div>
 				</div>
 				<div id="row">
@@ -82,10 +82,10 @@
 							<img src="./assets/icons/lqdoj.png" class="icon" />
 							<h3>LQD Online Judge</h3>
 						</div>
-						<h4 id="sub-img-title">Full Stack Engineer</h4>
+						<h4 id="sub-img-title">Part-time Internship</h4>
 					</div>
 					<div id="col2">
-						<h3>Summer 2023</h3>
+						<h3>Full Stack Engineer</h3>
 					</div>
 				</div>
 
@@ -95,10 +95,10 @@
 							<img src="./assets/icons/tankhoa.png" class="icon" />
 							<h3>Tan Khoa Informatics Center</h3>
 						</div>
-						<h4 id="sub-img-title">Instructor</h4>
+						<h4 id="sub-img-title">Contractor</h4>
 					</div>
 					<div id="col2">
-						<h3>2022 - 2023</h3>
+						<h3>Instructor</h3>
 					</div>
 				</div>
 			</div>
